syntax = "proto3";

option csharp_namespace = "PaymentsMicroservice";

package PaymentsMicroservice;

// The greeting service definition.
service Payments {
  // Sends a greeting
  rpc Get (GetPaymentsRequest) returns (GetPaymentsResult);
  rpc GetTransactions (GetTransactionsRequest) returns (GetTransactionsResult);
  rpc Create (CreatePaymentRequest) returns (CreatePaymentResult);
  rpc Cancel (CancelPaymentRequest) returns (Empty);
}

message Transaction {
  string id = 1;
  string title = 2;
  float amount = 3;
  int64 timestamp = 4;
  string recipient = 5;
  string sender = 6;
  string paymentId = 7;
  string cardId = 8;
}

message Payment {
  string id = 1;
  float amount = 2;
  int64 startTimestamp = 3;
  PaymentStatus status = 4;
  int64 interval = 5;
  string accountId = 6;
  string recipient = 7;
}

enum PaymentStatus {
  ACTIVE = 0;
  CANCELLED = 1;
}

message GetPaymentsRequest {
  repeated int32 ids = 1;
}

message GetPaymentsResult {
  repeated Payment payments = 1;
}

message GetTransactionsRequest {
  repeated int32 ids = 1;
}

message GetTransactionsResult {
  repeated Transaction transactions = 1;
}

message CreatePaymentRequest {
  float amount = 2;
  int64 startTimestamp = 3;
  int64 interval = 5;
  string accountId = 6;
  string recipient = 7;
}

message CreatePaymentResult {
  Payment payment = 1;
}

message CancelPaymentRequest {
  string id = 1;
}

message Empty {

}